2024 update, removing projects section, accent on experience

--- a/index.html
+++ b/index.html
@@ -113,11 +113,12 @@
                     VAHAN <br />
                     <span>SAHAKYAN</span>
                   </h1>
-                  <h4 class="profession">Software Engineer</h4>
+                  <h4 class="profession">Middle Software Engineer</h4>
                 </div>
                 <div class="avatar"></div>
               </header>
               <section class="pdf-mode-contacts">
+                <div>https://linkedin.com/in/vahan-sahakyan</div>
                 <div>vahan.sahakyan1996@gmail.com</div>
                 <div>+374 95 27 68 27</div>
               </section>
@@ -125,39 +126,58 @@
                 <aside>
                   <div class="skills">
                     <h2>SKILLS</h2>
-                    <h3>PROFESSIONAL</h3>
 
                     <ul>
                       <li>JavaScript / TypeScript</li>
-                      <li>React / Node / Express</li>
-                      <li>Redux / Saga / Toolkit</li>
+                      <li>HTML / CSS / JSX / ES6</li>
+                      <li>Figma / Adobe XD / WCAG</li>
+                      <li>Tailwind / Bootstrap / SCSS</li>
+                      <li>AntD / Material / CSS-in-JS</li>
+                      <li>GitHub / GitLab / Bitbucket</li>
+                      <li>ESLint / SonarQube / Jest</li>
+                      <li>React / Node / Express / Electron</li>
+                      <li>Redux / Thunk / Saga / Toolkit</li>
+                      <li>Java / Spring / Hibernate</li>
+                      <li>Spring Data / JPA / JDBC</li>
                       <li>APIs / Postman / Swagger</li>
-                      <li>Version Control / Git</li>
-                      <li>Java / Spring / SQL / JPA</li>
-                      <li>Shell-Scripting / RegExp</li>
+                      <li>MicroServices / Docker / YAML</li>
+                      <li>Apache Kafka / WebSockets</li>
+                      <li>Bash Scripting / RegExp</li>
+                      <li>Data Structures / Algorithms</li>
+                      <li>VS Code / IntelliJ / Eclipse / VIM</li>
+                      <li>Unix / Linux / MacOS / Windows</li>
                     </ul>
                   </div>
+                  <h2>EDUCATION</h2>
                   <div class="education">
-                    <h3>EDUCATION</h3>
-                    <br />
-                    <h4>BOOTCAMP</h4>
-                    <h5>BPC Armenia</h5>
-                    <p>[c++, python, linux, bash]</p>
-                    <p>2018-2019</p>
-                    <br />
-                    <h4>COURSES</h4>
-                    <h5>UDEMY: Jonas Schmedtmann</h5>
-                    <p>- The Complete JS Course</p>
-                    <p>- Node/Express Bootcamp</p>
-                    <p>2021-2022</p>
-                    <br />
-                    <h5>ZTM: Andrei Neagoie</h5>
-                    <p>- React/Redux Course</p>
-                    <p>2021-2022</p>
-                    <br />
-                    <h5>John Purcell: Derby, UK</h5>
-                    <p>- Java Core 11 Course</p>
-                    <p>2022-2023</p>
+                    <section>
+                      <h4>MENTORSHIP · 1 year</h4>
+                      <div>
+                        <h5>BPC Armenia: Artak Yenokyan</h5>
+                        <h6>Sr. Engineering Manager at Siemens EDA</h6>
+                        <p>C++, Python, Linux, Bash</p>
+                        <h6>2018 - 2019</h6>
+                      </div>
+                    </section>
+                    <section>
+                      <h4>ONLINE COURSES · 4+</h4>
+                      <div>
+                        <h5>UDEMY: Jonas Schmedtmann</h5>
+                        <p>- The Complete JS Course</p>
+                        <p>- Node/Express Bootcamp</p>
+                        <h6>2021 - 2022</h6>
+                      </div>
+                      <div>
+                        <h5>ZTM: Andrei Neagoie</h5>
+                        <p>- React/Redux Course</p>
+                        <h6>2021 - 2022</h6>
+                      </div>
+                      <div>
+                        <h5>John Purcell: Derby, UK</h5>
+                        <p>- Java Core 11 Course</p>
+                        <h6>2022 - 2023</h6>
+                      </div>
+                    </section>
                   </div>
                 </aside>
                 <div class="content">
@@ -165,167 +185,173 @@
                     <!-- ABOUT START -->
                     <h2>ABOUT</h2>
                     <p>
-                      Always-learning engineer with experience in developing
-                      enterprise-level applications for about 2 years.
+                      T shaped software engineer specialized in web technologies
+                      <br />&bull;&nbsp; 2+ years of [frontend heavy]
+                      experience.
                       <br />
-                      &bull;&nbsp; Skilled in Javascript and related
-                      technologies
+                      &bull;&nbsp; Highly skilled in JavaScript, TypeScript,
+                      React
                       <br />
-                      &bull;&nbsp; Familiar with Java Core, Spring, Hibernate,
-                      JPA
+                      &bull;&nbsp; Efficient working with Java, Spring,
+                      Hibernate, JPA
                       <br />
-                      &bull;&nbsp; English level - Upper Intermediate (B2)
+                      &bull;&nbsp; Basic knowledge: C++, Python, Data Analytics
+                      <!-- <br />
+                      &bull;&nbsp; Developer Productivity and Problem Solving -->
                       <br />
-                      &bull;&nbsp; Strong interpersonal communication skills
+                      &bull;&nbsp; English level: Upper-Intermediate [B2]
                       <br />
-                      &bull;&nbsp; Ability and openness to learn, fail, reflect
+                      &bull;&nbsp; Social skills: verbal-written communication,
+                      self-awareness, empathy, openness to learn, fail, reflect
                       and apply learnings moving forward
                     </p>
                     <br />
                     <!-- ABOUT END -->
 
                     <!-- EXPERIENCE START -->
-                    <!-- 1 -->
+                    <!-- 3 -->
                     <h2>EXPERIENCE</h2>
-                    <h3 class="experience-name">DATAFOUNDRY LABS</h3>
+                    <h3 class="experience-name">Middle Software Engineer</h3>
+                    <!-- <h3 class="experience-name">MIDDLE SOFTWARE ENGINEER</h3> -->
                     <div class="job-info">
                       <h4>
-                        React
-                        <span> | </span>
-                        Saga
-                        <span> | </span>
-                        Ant Design
-                        <span> | </span>
-                        Chart.js
+                        DATAFOUNDRY
+                        <!-- · Full-time -->
+                        <!-- <br /> -->
+                        <span>&nbsp; | &nbsp;</span>
+
+                        <!-- · -->
+                        Sep 2023 - Present
                       </h4>
                     </div>
-                    <ul style="margin-top: 4px">
-                      <li>
-                        <strong>Clinical Risks & Signals</strong>
-                        Monitoring solution
-                      </li>
-                    </ul>
+                    <p style="margin-bottom: 8px">
+                      <strong>
+                        [ DF mSignal AI, DF Literature Monitor, DF mSafety AI ]
+                      </strong>
+                      <br />
+                      &bull;&nbsp; Organizing large-scale refatoring between
+                      MicroFrontends.
+
+                      <br />&bull;&nbsp; Setting up frontend quality tools like
+                      ESLint in legacy codebases.
+
+                      <br />&bull;&nbsp; Writing unit tests for overall minimum
+                      of 70% code coverage.
+
+                      <br />&bull;&nbsp; Reducing code-smells for passing
+                      SonarQube quality gate.
+
+                      <br />&bull;&nbsp; Restructuring static components into
+                      library-style dynamic reusables for the entire ecosystem.
+
+                      <br />
+                      <strong>
+                        Skills: React · ESLint · TypeScript · JSDoc · Webpack ·
+                        Productivity Improvement · Mentorship · Documentation ·
+                        Tech Design
+                      </strong>
+
+                      <br />
+                    </p>
 
                     <!-- 2 -->
-                    <h3 class="experience-name">NWSLAB</h3>
+                    <h3 class="experience-name">Junior+ Software Engineer</h3>
+                    <!-- <h3 class="experience-name">MIDDLE SOFTWARE ENGINEER</h3> -->
                     <div class="job-info">
                       <h4>
-                        React
-                        <span> | </span>
-                        TypeScript
-                        <span> | </span>
-                        Material UI
-                        <span> | </span>
-                        React Hook Form
+                        NWSLAB
+                        <!-- · Full-time -->
+                        <!-- <br /> -->
+                        <span>&nbsp; | &nbsp;</span>
+
+                        <!-- · -->
+                        Nov 2022 - Sep 2023 · 11 mos
                       </h4>
                     </div>
-                    <ul style="margin-top: 4px">
-                      <li>
-                        <strong>Music Rights & Distribution</strong> Management
-                        platform
-                      </li>
-                    </ul>
+                    <p style="margin-bottom: 8px">
+                      <strong>
+                        [ Carpathia UI - Warner Music Group, ADA ]
+                      </strong>
+                      <br />
+                      &bull;&nbsp; Working in a friendly cross-cultural
+                      environment with team members from Russia, Ukraine,
+                      Armenia, US, Romania, India.
+
+                      <br />&bull;&nbsp; Contributing in architectural decision
+                      making processes during Tech Designs with BE engineers and
+                      the Solutions Architect.
+
+                      <br />&bull;&nbsp; Transforming Figma into high quality
+                      and maintainable code
+
+                      <br />&bull;&nbsp; Peer-Reviewing each other's code, under
+                      Tech Lead's guidance.
+
+                      <br />&bull;&nbsp; Implementing generic TypeScript utility
+                      types for project's specific needs
+                      <br />
+
+                      <strong>
+                        Skills: React · JavaScript · Redux · ESLint · TypeScript
+                        · Material · Business Analysis · Regular Expressions ·
+                        OKTA · Amplitude Analytics
+                      </strong>
+                    </p>
+
+                    <!-- 1 -->
+                    <h3 class="experience-name">Junior Software Engineer</h3>
+                    <!-- <h3 class="experience-name">MIDDLE SOFTWARE ENGINEER</h3> -->
+                    <div class="job-info">
+                      <h4>
+                        DATAFOUNDRY
+                        <!-- · Full-time -->
+                        <!-- <br /> -->
+                        <span>&nbsp; | &nbsp;</span>
+
+                        <!-- · -->
+                        Mar 2022 - Nov 2022 · 9 mos
+                      </h4>
+                    </div>
+                    <p style="margin-bottom: 8px">
+                      <strong>
+                        [ DF mSignal AI - Clinical Trials, Signal Management ]
+                      </strong>
+                      <br />
+                      &bull;&nbsp; Kick started a dashboard analytics app, with
+                      4 user roles.
+                      <br />
+                      &bull;&nbsp; Integrated and reused the legacy version of
+                      the project.
+                      <br />
+                      &bull;&nbsp; Optimized the performance by modifying the
+                      state management. <br />
+                      &bull;&nbsp; Refactored the codebase following the SOC
+                      concept and DRY principle.
+                      <br />
+                      &bull;&nbsp; Designed tech solutions by collaborating with
+                      the back-end engineers.
+                      <br />
+                      <strong>
+                        Skills: React · JavaScript · Redux · Saga · AntD · Adobe
+                        XD
+                      </strong>
+                    </p>
+
                     <!-- EXPERIENCE END -->
 
-                    <hr />
                     <br />
-
-                    <!-- PROJECTS START -->
-                    <h2>PROJECTS</h2>
-                    <h3 class="experience-name">CRWN CLOTHING</h3>
-                    <div class="job-info">
-                      <h4>
-                        React
-                        <span> | </span>
-                        Saga
-                        <span> | </span>
-                        Stripe
-                        <span> | </span>
-                        Firebase
-                        <span> | </span>
-                        Styled-Components
-                      </h4>
-                    </div>
-                    <ul style="margin-top: 4px">
-                      <li><strong>E-Commerce</strong> web application</li>
-                    </ul>
-                    <ul style="margin-top: 4px">
-                      <li class="project-cta">
-                        <a
-                          target="_blank"
-                          href="https://vahan-sahakyan.github.io/crwn-clothing"
-                          >CRWN Clothing</a
-                        >
-                        <a
-                          target="_blank"
-                          href="https://github.com/vahan-sahakyan/crwn-clothing/"
-                        >
-                          <span>
-                            <img
-                              alt="expand code"
-                              src="https://gw.alipayobjects.com/zos/antfincdn/Z5c7kzvi30/expand.svg"
-                              class="code-expand-icon-hide"
-                            />
-                            <img
-                              alt="expand code"
-                              src="https://gw.alipayobjects.com/zos/antfincdn/4zAaozCvUH/unexpand.svg"
-                              class="code-expand-icon-show"
-                            />
-                            Browse Code
-                          </span></a
-                        >
-                      </li>
-                    </ul>
-                    <h3 class="experience-name">E-PIANO</h3>
-                    <div class="job-info">
-                      <h4>
-                        JavaScript <span> | </span> Audio API
-                        <span> | </span> OOP
-                      </h4>
-                    </div>
-                    <ul style="margin-top: 4px">
-                      <li>
-                        <strong>Music-Keyboard</strong> in-browser emulator
-                      </li>
-                    </ul>
-                    <ul style="margin-top: 4px">
-                      <li class="project-cta">
-                        <a
-                          target="_blank"
-                          href="https://vahan-sahakyan.github.io/e-piano"
-                          >E-Piano</a
-                        >
-                        <a
-                          target="_blank"
-                          href="https://github.com/vahan-sahakyan/e-piano/"
-                        >
-                          <span>
-                            <img
-                              alt="expand code"
-                              src="https://gw.alipayobjects.com/zos/antfincdn/Z5c7kzvi30/expand.svg"
-                              class="code-expand-icon-hide"
-                            />
-                            <img
-                              alt="expand code"
-                              src="https://gw.alipayobjects.com/zos/antfincdn/4zAaozCvUH/unexpand.svg"
-                              class="code-expand-icon-show"
-                            />
-                            Browse Code</span
-                          >
-                        </a>
-                      </li>
-                    </ul>
-                    <!-- PROJECTS END -->
                   </div>
                 </div>
               </div>
             </div>
           </div>
+
           <!--  -->
         </div>
         <div class="right"></div>
       </div>
       <!--  -->
+
       <footer></footer>
     </div>
   </body>
