font awesome, single lined name

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       rel="stylesheet"
     />
     <link rel="icon" type="image/png" href="./favicon_blue.png" />
+    <link rel="stylesheet" href="/icons/fa6_1_1/css/all.min.css" />
     <script defer src="./script.js"></script>
     <title>Curriculum Vitae | Vahan Sahakyan</title>
   </head>
@@ -110,17 +111,27 @@
               <header>
                 <div class="title">
                   <h1 class="full-name">
-                    VAHAN <br />
+                    VAHAN
+                    <!-- <br /> -->
                     <span>SAHAKYAN</span>
                   </h1>
-                  <h4 class="profession">Middle Software Engineer</h4>
+                  <h4 class="profession">Software Engineer</h4>
                 </div>
                 <div class="avatar"></div>
               </header>
               <section class="pdf-mode-contacts">
-                <div>https://linkedin.com/in/vahan-sahakyan</div>
-                <div>vahan.sahakyan1996@gmail.com</div>
-                <div>+374 95 27 68 27</div>
+                <div class="pdf-mode-contacts__row">
+                  <i class="fa-solid fa-link-simple fa-xs"></i>
+                  <div>https://linkedin.com/in/vahan-sahakyan</div>
+                </div>
+                <div class="pdf-mode-contacts__row">
+                  <i class="fa-regular fa-envelope"></i>
+                  <div>vahan.sahakyan1996@gmail.com</div>
+                </div>
+                <div class="pdf-mode-contacts__row">
+                  <i class="fa-regular fa-phone"></i>
+                  <div>+374 95 27 68 27</div>
+                </div>
               </section>
               <div class="content-wrapper">
                 <aside>
@@ -211,8 +222,7 @@
                     <!-- EXPERIENCE START -->
                     <!-- 3 -->
                     <h2>EXPERIENCE</h2>
-                    <h3 class="experience-name">Middle Software Engineer</h3>
-                    <!-- <h3 class="experience-name">MIDDLE SOFTWARE ENGINEER</h3> -->
+                    <h3 class="experience-name">Software Engineer</h3>
                     <div class="job-info">
                       <h4>
                         DATAFOUNDRY
@@ -255,8 +265,7 @@
                     </p>
 
                     <!-- 2 -->
-                    <h3 class="experience-name">Junior+ Software Engineer</h3>
-                    <!-- <h3 class="experience-name">MIDDLE SOFTWARE ENGINEER</h3> -->
+                    <h3 class="experience-name">Software Engineer</h3>
                     <div class="job-info">
                       <h4>
                         NWSLAB
@@ -299,8 +308,7 @@
                     </p>
 
                     <!-- 1 -->
-                    <h3 class="experience-name">Junior Software Engineer</h3>
-                    <!-- <h3 class="experience-name">MIDDLE SOFTWARE ENGINEER</h3> -->
+                    <h3 class="experience-name">Software Engineer</h3>
                     <div class="job-info">
                       <h4>
                         DATAFOUNDRY
