--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
       rel="stylesheet"
     />
     <link rel="icon" type="image/png" href="./favicon_blue.png" />
-    <link rel="stylesheet" href="/icons/fa6_1_1/css/all.min.css" />
+    <link rel="stylesheet" href="./icons/fa6_1_1/css/all.min.css" />
     <script defer src="./script.js"></script>
     <title>Curriculum Vitae | Vahan Sahakyan</title>
   </head>
