typo in experience

--- a/index.html
+++ b/index.html
@@ -239,7 +239,7 @@
                         [ DF mSignal AI, DF Literature Monitor, DF mSafety AI ]
                       </strong>
                       <br />
-                      &bull;&nbsp; Organizing large-scale refatoring between
+                      &bull;&nbsp; Organizing large-scale refactoring between
                       MicroFrontends.
 
                       <br />&bull;&nbsp; Setting up frontend quality tools like
