pdf-mode toggle button

--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
             id="download"
             href="./download/VAHAN_SAHAKYAN__WEB_DEV.pdf"
             download="VAHAN_SAHAKYAN__WEB_DEV"
-            ><svg
+          >
+            <svg
               xmlns="http://www.w3.org/2000/svg"
               fill="none"
               viewBox="0 0 24 24"
@@ -46,9 +47,16 @@
                 strokeLinecap="round"
                 strokeLinejoin="round"
                 d="M4 16v1a3 3 0 003 3h10a3 3 0 003-3v-1m-4-4l-4 4m0 0l-4-4m4 4V4"
-              /></svg
-            ><span>Download PDF</span></a
-          >
+              />
+            </svg>
+            <span>Download PDF</span>
+          </a>
+          <a id="download" class="pdf-mode-btn">
+            <figure>
+              PDF Mode:&nbsp;
+              <div>OFF</div>
+            </figure>
+          </a>
           <div class="a4">
             <div class="glass">
               <a href="">
