github link, contact links clickable with _blank

--- a/index.html
+++ b/index.html
@@ -128,9 +128,23 @@
                 <div class="avatar"></div>
               </header>
               <section class="pdf-mode-contacts">
-                <div class="pdf-mode-contacts__row">
+                <div
+                  class="pdf-mode-contacts__row cursor-pointer"
+                  onclick="window.open(this.textContent)"
+                >
                   <i class="fa-solid fa-link-simple fa-xs"></i>
                   <div>https://linkedin.com/in/vahan-sahakyan</div>
+                </div>
+                <div
+                  class="pdf-mode-contacts__row cursor-pointer"
+                  onclick="window.open(this.textContent)"
+                >
+                  <!-- <i class="fa-regular fa-code-branch fa-sm"></i> -->
+                  <!-- <i class="fa-regular fa-code-commit fa-sm"></i> -->
+                  <i class="fa-regular fa-code-pull-request fa-sm"></i>
+                  <!-- <i class="fa-brands fa-github"></i> -->
+                  <!-- <i class="fa-brands fa-git-alt"></i> -->
+                  <div>https://github.com/vahan-sahakyan</div>
                 </div>
                 <div class="pdf-mode-contacts__row">
                   <i class="fa-regular fa-envelope"></i>
