better skill section

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                 </div>
                 <div class="pdf-mode-contacts__row">
                   •
-                  <div>vahan.sahakyan1996@gmail.com</div>
+                  <div>vahan.codes@gmail.com</div>
                 </div>
                 <div
                   class="pdf-mode-contacts__row cursor-pointer"
@@ -289,42 +289,51 @@
                 <aside>
                   <div class="skills">
                     <h2>SKILLS</h2>
-
                     <ul>
-                      <li>Responsive Web Design and UI/UX Optimization</li>
                       <li>
-                        Full-Stack Development with JavaScript, TypeScript, and
-                        Modern Frameworks
-                      </li>
-                      <li>Scalable and Maintainable Code Development</li>
-                      <li>
-                        Cloud-Based Deployments with Google Cloud Platform (GCP)
+                        <strong>Backend Development:</strong> Java, Golang,
+                        Spring, Hibernate, JPA, RESTful APIs, Microservices
                       </li>
                       <li>
-                        API Design, Integration, and Documentation (Postman,
-                        Swagger)
+                        <strong>Cloud Deployments:</strong> Google Cloud
+                        Platform (GCP), Kafka, Docker, Kubernetes, ArgoCD
                       </li>
                       <li>
-                        Automated Testing and Code Quality Tools (Jest, ESLint,
-                        SonarQube, Code Climate)
+                        <strong>Linux Workflows & Scripting:</strong> Bash,
+                        Shell scripting, Regular Expressions, Unix tools
                       </li>
                       <li>
-                        Backend Development with Java, Spring, and Microservices
-                        Architecture
+                        <strong>Full-Stack Development:</strong> JavaScript,
+                        TypeScript, React, Redux, Angular, RxJS, Nx, Monorepo, Node.js, Prisma
                       </li>
                       <li>
-                        Advanced Debugging and Refactoring of Legacy Codebases
+                        <strong>Database Management:</strong> MongoDB,
+                        PostgreSQL, RDBMS, Query Optimization
                       </li>
                       <li>
-                        Bash Scripting, Regular Expressions, and Linux-Based
-                        Workflows
+                        <strong>Testing & Code Quality:</strong> Jest, ESLint,
+                        SonarQube, Code Climate, Unit & Integration Testing
                       </li>
                       <li>
-                        Team Collaboration, Code Reviews, and Technical
-                        Knowledge Sharing
+                        <strong>Code Optimization & Refactoring:</strong> Legacy
+                        code migration, SOC (Separation of Concerns), DRY
+                        principles
+                      </li>
+                      <li>
+                        <strong>Scalable System Architecture:</strong> API
+                        Design, Caching strategies, Fastly, Varnish, Distributed systems
+                      </li>
+                      <li>
+                        <strong>Dev Tools & Automation:</strong> Git, Makefiles, Webpack,
+                        NPM, Yarn, JFrog Artifactory
+                      </li>
+                      <li>
+                        <strong>Collaboration & Leadership:</strong> Code
+                        reviews, technical mentoring, and documentation
                       </li>
                     </ul>
                   </div>
+
                   <h2>EDUCATION</h2>
                   <div class="education">
                     <section>
