--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
                     </ul>
 
                     <!-- 2 -->
-                    <h3 class="experience-name">Frontend Engineer</h3>
+                    <h3 class="experience-name">Software Engineer</h3>
                     <div class="job-info">
                       <h4>
                         NWSLAB
@@ -250,7 +250,7 @@
                     </ul>
 
                     <!-- 1 -->
-                    <h3 class="experience-name">Junior Frontend Engineer</h3>
+                    <h3 class="experience-name">Software Engineer</h3>
                     <div class="job-info">
                       <h4>
                         DATAFOUNDRY
